<resources>
    <string name="app_name">Alimentar</string>
    <string name="menu_title_1">Familia</string>
    <string name="menu_title_2">Ingredientes</string>
    <string name="menu_title_3">Menu</string>

    <!--COMMON ERRORS/ SUCCESS-->
    <string name="lista_vacia">No hay nada aquí</string>
    <string name="no_hay_coincidencias">No hay coincidencias en su búsqueda</string>
    <string name="no_hay_familiares">No hay familiares creados</string>
    <string name="no_hay_hortalizas_crear">No hay ingredientes</string>
    <string name="no_hay_menus">No existen menus</string>
    <string name="no_hay_recomendaciones">No pudimos encontrar opciones para recomendarte</string>
    <string name="no_hay_afecciones">No hay afecciones</string>
    <string name="no_hay_hortalizas">No tienes ingredientes creados</string>
    <string name="error_permisos">Deberá ir a la configuración y habilitar los permisos que falten manualmente</string>
    <string name="error_permisos_no_condedidos">Los permisos no fueron concedidos</string>
    <string name="error_title_bottom_sheet">Ha ocurrido un problema</string>
    <string name="success_title_bottom_sheet">Perfecto!</string>
    <string name="ok">OK</string>
    <string name="buscar">Buscar</string>
    <string name="guardar">Guardar</string>
    <string name="error">Error</string>
    <string name="salir">Salir</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="enviar">Enviar</string>
    <string name="siguiente">Siguiente</string>
    <string name="ingresar">Ingresar</string>
    <string name="reintentar">Reintentar</string>
    <string name="editar">Editar</string>
    <string name="success_subtitle_bottom_sheet">Toda la operación salió correctamente como estaba planeada</string>
    <string name="error_no_autorizado">Usted no está autorizado para esta acción</string>
    <string name="error_no_refresh_token">La autorización otorgada no es válida. Vuelva a iniciar sesión</string>
    <string name="error_dato_no_encontrado">No se pudieron encontrar los datos que estas solicitando</string>
    <string name="error_datos_mal_ingresados">Por favor, revisá si todos los datos estan ingresados correctamente</string>
    <string name="error_datos_requerdios_vacios">Hay campos que son requeridos y estas dejando vacíos.</string>
    <string name="error_servidor">Estamos teniendo problemas en el servidor. Intentá mas tarde por favor</string>
    <string name="error_socket_timeout">¡Algo salió mal, El servidor no responde correctamente!</string>
    <string name="error_sintaxis_json">¡Algo salió mal, El servidor no responde correctamente!</string>
    <string name="error_ssl_url_no_verificada">Tal parece que la url a la que consulta no está registrada o ya no existe</string>
    <string name="error_connected">Parece que tu teléfono no está conectado a internet. Reintentá más tarde</string>
    <string name="no_hay_conexion">Parece que tu teléfono no está conectado a internet. Reintentá más tarde</string>

    <!--SPECIFICS ERRORS IN APP-->
    <string name="error_nombre">El nombre ingresado es inválido</string>
    <string name="error_email">El email ingresado es inválido</string>
    <string name="error_usuario">El usuario ingresado es inválido</string>
    <string name="error_fecha_nacimiento">Debe ingresar una fecha de nacimiento</string>
    <string name="error_cantidad_horataliza">Debe ingresar la cantidad que posee de la hortaliza en gramos</string>
    <string name="error_peso">Debes ingresar tu peso</string>
    <string name="error_altura">Debes ingresar tu altura</string>
    <string name="error_password">La contraseña debe ser mínimo de 8 caracteres.</string>
    <string name="error_password_confirmation">Las contraseñas no coinciden.</string>
    <string name="error_login">El usuario y/o la contraseña son incorrectos.</string>
    <string name="error_id_familiar">Ha ocurrido un problema con este familiar, por favor intenta mas tarde.</string>

    <!--GENERAL TEXT IN APP-->
    <string name="bienvenido">¡Bienvenido!</string>
    <string name="quiero_registrarme">Quiero registrarme</string>
    <string name="ya_tengo_cuenta">Ya tengo cuenta</string>
    <string name="usuario">Usuario</string>
    <string name="usuario_mayus">USUARIO</string>
    <string name="email_mayus">EMAIL</string>
    <string name="password_mayus">CONTRASEÑA</string>
    <string name="ingresar_datos">Ingresar datos</string>
    <string name="nombre_completo">Nombre Completo</string>
    <string name="direccion">Dirección</string>
    <string name="apellido">Apellido</string>
    <string name="nombre">Nombre</string>
    <string name="dni_o_cuit_mayus">DNI/CUIT</string>
    <string name="tipo_documento">Tipo de Documento</string>
    <string name="documento">Documento</string>
    <string name="email">Email</string>
    <string name="fecha_nac">Fecha de nacimiento</string>
    <string name="telefono">Teléfono</string>
    <string name="sexo">Sexo</string>
    <string name="password">Contraseña</string>
    <string name="repetir_password">Repetir contraseña</string>
    <string name="hola">¡Hola,</string>
    <string name="editar_mi_perfil">Editar mi perfil</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="aqui_modificas_tus_datos">Aquí puedes modificar tus datos</string>
    <string name="numero_documento">Número de Documento</string>
    <string name="mi_familia_mayus">MI FAMILIA</string>
    <string name="mis_vegetales_mayus">MIS INGREDIENTES</string>
    <string name="altura_en_cm">Altura (cm)</string>
    <string name="peso_en_kg">Peso (Kg)</string>
    <string name="nuevo_familiar">Nuevo Familiar</string>
    <string name="editar_familiar">Editar familiar</string>
    <string name="afecciones">Afecciones</string>
    <string name="nueva_afeccion">Nueva Afección</string>
    <string name="elija_una_afeccion">Elija una afección</string>
    <string name="nueva_hortaliza">Nueva Hortaliza</string>
    <string name="cantidad">Cantidad (gr)</string>
    <string name="crear">Crear</string>
    <string name="recomendaciones">Recomendaciones segun tus requerimientos nutricionales</string>
    <string name="todas_nuestras_opciones">Todas nuestras opciones</string>
    <string name="ingredientes">Ingredientes</string>
    <string name="preparacion">Preparación</string>


</resources>
